$MODULE = "MLDBM::Sync"; $VERSION = .23; $DATE = '2001/11/08';

+ Updated AUTHORS section with perl license reference.

+ ./bench/bench_sync.pl has -n argument to specify # of reads/writes
  where default is 100

+ ./bench/bench_sync.pl has --bundle argument to allows for reads/writes
  in locked sections of that #, which improves performance.

+ $dbm->Size() for Tie::TextDir now adds size of directory as
  reported by OS.  This still does not seem to take into account
  the extra file inode overhead on a file system like ext2 linux
  but its better now at least.

$MODULE = "MLDBM::Sync"; $VERSION = .21; $DATE = '2001/10/31';

+ Added support in CLEAR() & SyncSize() for a tie directory
  based data structure like Tie::TextDir

$MODULE = "MLDBM::Sync"; $VERSION = .19; $DATE = '2001/10/15';

- Fixed keys(%hash), where one of the keys was boolean FALSE
  like '', or 0.  Bug found by Elliot Glaysher.

$MODULE = "MLDBM::Sync"; $VERSION = .17; $DATE = '2001/10/11';

- Make EXISTS safe after explicity tied hash ReadLock()

- For loops in MLDBM::Sync::SDBM_File that are friendlier 
  to perl5.004_04

- Better Lock() return value, whether or not a lock has
  previously been acquired

$MODULE = "MLDBM::Sync"; $VERSION = .15; $DATE = '2001/09/21';

- API fixes for easier integration with Apache::ASP

- Made $sync_dbm->UnLock() repeatable, with the next
  $sync_dbm->Lock() still working.

$MODULE = "MLDBM::Sync"; $VERSION = .11; $DATE = '2001/09/12';

++ Taking module out of BETA.  Been using it in production 
   for 3 months, and in development for 6.

- Bug fix for undefined warning in MLDBM::Sync::SDBM_File

- MLDBM::Sync::SDBM_File STORE() now deletes prior key parts
  before storing the value, which will result in more correct
  behavior, there was a possible bug here.  Added a test
  in t/sdbm_rec_big.t testing for this possible error.

+ Deletion of lock file when calling CLEAR(), or %dbm = ()
  Do this after unlock, which _might_ have a race condition